doctor flow