@@ -1,5 +1,6 @@
 package com.phrms.HealthCareSystem.service.auth;
 
+import com.phrms.HealthCareSystem.dto.RefreshTokenRequest;
 import com.phrms.HealthCareSystem.entity.OTP;
 import com.phrms.HealthCareSystem.entity.User;
 import com.phrms.HealthCareSystem.model.LoginResponse;
@@ -9,6 +10,8 @@ import com.phrms.HealthCareSystem.repository.UserRepository;
 import com.phrms.HealthCareSystem.util.JWTUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 public class AuthServiceImpl implements AuthService{
@@ -25,7 +28,8 @@ public class AuthServiceImpl implements AuthService{
     @Override
     public LoginResponse verifyEmail(OTPResponse otp) throws Exception {
         LoginResponse loginResponse = new LoginResponse();
-        OTP otpValue = otpRepository.findByEmail(otp.getEmail()).getLast();
+        List<OTP> otpList = otpRepository.findByEmail(otp.getEmail());
+        OTP otpValue = otpList.get(otpList.size() - 1);
         if (otpValue.getOtp().equals(otp.getOtp())){
             User userDetails = new User();
             userDetails.setAadharNumber(otp.getAadharNumber());
@@ -37,6 +41,21 @@ public class AuthServiceImpl implements AuthService{
             return loginResponse;
         }else {
             throw new Exception("Invalid OTP!");
+        }
+    }
+
+    @Override
+    public LoginResponse refreshToken(RefreshTokenRequest refreshToken) throws Exception {
+        LoginResponse loginResponse = new LoginResponse();
+        User user = new User();
+        user.setAadharNumber(refreshToken.getAadharNumber());
+        if (jwtUtil.validateToken(refreshToken.getRefreshToken(),user)){
+            loginResponse.setRefresh_token(jwtUtil.generateRefreshToken(user));
+            loginResponse.setAccess_token(jwtUtil.generateToken(user));
+            loginResponse.setName(userRepository.findByAadharNumber(refreshToken.getAadharNumber()).get().getPatientName());
+            return loginResponse;
+        }else {
+            throw new Exception("Refresh Token Expired");
         }
     }
 }
